--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "ext/stb"]
 	path = ext/stb
 	url = https://github.com/nothings/stb.git
+[submodule "ext/SPIRV-Reflect"]
+	path = ext/SPIRV-Reflect
+	url = https://github.com/KhronosGroup/SPIRV-Reflect.git
